DT-169 "As an Admin, i want all the admin pages to be updated to the style of the previous sermons page" Pages were adjusted to mimic the the style of PreviousSerms. Some pages have a bug where elements are hidden underneath the footer. May be adjusted later.

--- a/Frontend/src/components/AdminStyles.css
+++ b/Frontend/src/components/AdminStyles.css
@@ -1,7 +1,7 @@
 .containerStyle {
     background-color: #e9fbe9;
     border-radius: 10px;
-    border: 3px solid #2e6724;
+    border: 3px solid #74a015;
     padding: 20px;
     width: 300px;
     font-weight: bold;
