--- a/Frontend/src/components/Events.css
+++ b/Frontend/src/components/Events.css
@@ -7,7 +7,7 @@
 
 .event {
   width: 300px;
-  border: 4px solid #537802;
+  border: 4px solid #74a015;
   background-color: #e6ffe6;
   padding: 15px;
   border-radius: 30px;
